--- a/Web Application.csproj
+++ b/Web Application.csproj
@@ -5,5 +5,9 @@
     <RootNamespace>Web_Application</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+  </ItemGroup>
+
 
 </Project>
